# acorn

./: .gitignore
.cursor/rules/: acorn.mdc
acorn-backend/: README.md  __init__.py  app.py  config.py  database.py  main.py  pyproject.toml  routes.py
acorn-backend/auth/: __init__.py  base.py  factory.py  password.py
acorn-frontend/: README.md  package-lock.json  package.json
acorn-frontend/src/app/: globals.css
acorn-frontend/src/app/dashboard/: page.module.css  page.tsx
acorn-frontend/src/app/login/: page.module.css  page.tsx
acorn-frontend/src/app/requirements/: page.module.css  page.tsx
acorn-frontend/src/components/: Layout.tsx  Navbar.module.css  Navbar.tsx
acorn-frontend/src/components/requirements/: NewRequirement.module.css  NewRequirement.tsx  RequirementList.module.css  RequirementList.tsx
