[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acorn-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.6.0",
    "flask-sqlalchemy>=3.1.0",
    "werkzeug>=3.0.0",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools]
package-dir = {"acorn_backend" = "."}
packages = ["acorn_backend", "acorn_backend.auth"]
